# tiny-regex-c

./: CMakeLists.txt  README.md  re.c  re.h
gtests/: CMakeLists.txt  tests.cpp  tests_defs.cpp  testsn.cpp
gtests/include/: tests_defs.hpp
